# hsTODO

./: Command.hs  Locale.hs  Logic.hs  README.md  Repeat.hs  Setup.hs  Statedata.hs  TODOlist.cabal  TODOlist.hs  Task.hs  TaskBook.hs  Taskbook.hs  Utils.hs  save.txt  todol.cabal  todol.hs
