name:           TODOlist
version:        0.1
license:        MIT
--license-file:   LICENSE
author:         Paweł Szynkiewicz
category:       Other
synopsis:       TODO list
description:    TODO list
build-type:     Simple
cabal-version:  >= 1.4

executable htd
    build-depends:  ansi-terminal,
                    base >= 4 && < 5,
                    containers, 
                    directory,
                    haskeline,
                    mtl,
                    parallel >= 3 && < 4,
                    time
    main-is:        TODOlist.hs
    ghc-options:    -Wall
